--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </head>
 
 <body>
+
     <!-- header -->
+
     <header class="page-header">
         <div class="container header">
 
@@ -55,6 +57,7 @@
 
     <main>
         <!-- section-one -->
+
         <section class="section-one">
             <div class="container">
                 <h1 class="section-one-title">Effective Solutions
@@ -63,10 +66,12 @@
                 <button type="button" class="one-button">Order Service</button>
             </div>
         </section>
+
         <!-- section-two  -->
+
         <section class="section-two">
             <div class="container">
-                <h2 class="title-section visually-hidden">OUR BENEFITS</h2>
+                <h2 class="title-section benefits visually-hidden">OUR BENEFITS</h2>
                 <ul class="section-two-lists">
                     <li class="section-two-list">
                         <h3 class="section-two-title">Strategy</h3>
@@ -90,42 +95,52 @@
                     <li class="section-two-list">
                         <h3 class="section-two-title">Technologies</h3>
                         <p class="section-two-text">Design practice focused on digital experiences. We bring forth a
-                            deep
-                            passion for
-                            problem-solving.</p>
+                            deep passion for problem-solving.</p>
                     </li>
                 </ul>
             </div>
         </section>
+
         <!-- section-three  -->
+
         <section class="section-three">
             <div class="container">
                 <h2 class="title-section">Our Team</h2>
                 <ul class="section-three-lists">
                     <li class="section-three-list">
                         <img src="./images/mark.jpg" alt="Product Designer" width="264">
-                        <h3 class="section-three-title">Mark Guerrero</h3>
-                        <p class="section-three-text">Product Designer</p>
+                        <div class="info">
+                            <h3 class="section-three-title">Mark Guerrero</h3>
+                            <p class="section-three-text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="section-three-list">
                         <img src="./images/tom.jpg" alt="Frontend Developer" width="264">
-                        <h3 class="section-three-title">Tom Ford</h3>
-                        <p class="section-three-text">Frontend Developer</p>
+                        <div class="info">
+                            <h3 class="section-three-title">Tom Ford</h3>
+                            <p class="section-three-text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="section-three-list">
                         <img src="./images/camila.jpg" alt="Marketing" width="264">
-                        <h3 class="section-three-title">Camila Garcia</h3>
-                        <p class="section-three-text">Marketing</p>
+                        <div class="info">
+                            <h3 class="section-three-title">Camila Garcia</h3>
+                            <p class="section-three-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="section-three-list">
                         <img src="./images/daniel.jpg" alt="Ui Designer" width="264">
-                        <h3 class="section-three-title">Daniel Wilson</h3>
-                        <p class="section-three-text">UI Designer</p>
+                        <div class="info">
+                            <h3 class="section-three-title">Daniel Wilson</h3>
+                            <p class="section-three-text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
         </section>
+
         <!-- section-four  -->
+
         <section class="section-four">
             <div class="container">
                 <h2 class="title-section">Our Portfolio</h2>
