--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <section class="section-two">
             <div class="container">
-                <h2 class="title-section benefits visually-hidden">OUR BENEFITS</h2>
+                <h2 class="title-section visually-hidden">OUR BENEFITS</h2>
                 <ul class="section-two-lists">
                     <li class="section-two-list">
                         <h3 class="section-two-title">Strategy</h3>
@@ -105,7 +105,7 @@
 
         <section class="section-three">
             <div class="container">
-                <h2 class="title-section">Our Team</h2>
+                <h2 class="title-section three-title">Our Team</h2>
                 <ul class="section-three-lists">
                     <li class="section-three-list">
                         <img src="./images/mark.jpg" alt="Product Designer" width="264">
@@ -143,37 +143,49 @@
 
         <section class="section-four">
             <div class="container">
-                <h2 class="title-section">Our Portfolio</h2>
+                <h2 class="title-section four-title">Our Portfolio</h2>
                 <ul class="section-four-lists">
                     <li class="section-four-list">
                         <img src="./images/banking.jpg" alt="Banking App" width="360">
-                        <h3 class="section-four-title">Banking App</h3>
-                        <p class="section-four-text">App</p>
+                        <div>
+                            <h3 class="section-four-title">Banking App</h3>
+                            <p class="section-four-text">App</p>
+                        </div>
                     </li>
                     <li class="section-four-list">
                         <img src="./images/cashless.jpg" alt="Cashless Payment" width="360">
-                        <h3 class="section-four-title">Cashless Payment</h3>
-                        <p class="section-four-text">Marketing</p>
+                        <div>
+                            <h3 class="section-four-title">Cashless Payment</h3>
+                            <p class="section-four-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="section-four-list">
                         <img src="./images/meditation.jpg" alt="Meditation App" width="360">
-                        <h3 class="section-four-title">Meditation App</h3>
-                        <p class="section-four-text">App</p>
+                        <div>
+                            <h3 class="section-four-title">Meditation App</h3>
+                            <p class="section-four-text">App</p>
+                        </div>
                     </li>
                     <li class="section-four-list">
                         <img src="./images/taxi.jpg" alt="Taxi Service" width="360">
-                        <h3 class="section-four-title">Taxi Service</h3>
-                        <p class="section-four-text">Marketing</p>
+                        <div>
+                            <h3 class="section-four-title">Taxi Service</h3>
+                            <p class="section-four-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="section-four-list">
                         <img src="./images/screen.jpg" alt="Screen Illustrations" width="360">
-                        <h3 class="section-four-title">Screen Illustrations</h3>
-                        <p class="section-four-text">Design</p>
+                        <div>
+                            <h3 class="section-four-title">Screen Illustrations</h3>
+                            <p class="section-four-text">Design</p>
+                        </div>
                     </li>
                     <li class="section-four-list">
                         <img src="./images/online.jpg" alt="Online Courses" width="360">
-                        <h3 class="section-four-title">Online Courses</h3>
-                        <p class="section-four-text">Marketing</p>
+                        <div class="four-info">
+                            <h3 class="section-four-title">Online Courses</h3>
+                            <p class="section-four-text">Marketing</p>
+                        </div>
                     </li>
                 </ul>
             </div>
