--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <section class="section-three">
             <div class="container">
-                <h2 class="title-section three-title">Our Team</h2>
+                <h2 class="title-section">Our Team</h2>
                 <ul class="section-three-lists">
                     <li class="section-three-list">
                         <img src="./images/mark.jpg" alt="Product Designer" width="264">
