--- a/index.html
+++ b/index.html
@@ -147,35 +147,35 @@
                 <ul class="section-four-lists">
                     <li class="section-four-list">
                         <img src="./images/banking.jpg" alt="Banking App" width="360">
-                        <div>
+                        <div class="four-info">
                             <h3 class="section-four-title">Banking App</h3>
                             <p class="section-four-text">App</p>
                         </div>
                     </li>
                     <li class="section-four-list">
                         <img src="./images/cashless.jpg" alt="Cashless Payment" width="360">
-                        <div>
+                        <div class="four-info">
                             <h3 class="section-four-title">Cashless Payment</h3>
                             <p class="section-four-text">Marketing</p>
                         </div>
                     </li>
                     <li class="section-four-list">
                         <img src="./images/meditation.jpg" alt="Meditation App" width="360">
-                        <div>
+                        <div class="four-info">
                             <h3 class="section-four-title">Meditation App</h3>
                             <p class="section-four-text">App</p>
                         </div>
                     </li>
                     <li class="section-four-list">
                         <img src="./images/taxi.jpg" alt="Taxi Service" width="360">
-                        <div>
+                        <div class="four-info">
                             <h3 class="section-four-title">Taxi Service</h3>
                             <p class="section-four-text">Marketing</p>
                         </div>
                     </li>
                     <li class="section-four-list">
                         <img src="./images/screen.jpg" alt="Screen Illustrations" width="360">
-                        <div>
+                        <div class="four-info">
                             <h3 class="section-four-title">Screen Illustrations</h3>
                             <p class="section-four-text">Design</p>
                         </div>
